Klein beetje invulling + publish naar appservice

--- a/src/Website/Views/Home/About.cshtml
+++ b/src/Website/Views/Home/About.cshtml
@@ -1,7 +1,14 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Over ons";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>
+    <ul>
+        <li>Thomas Bardoel</li>
+        <li>Remco Verheijen</li>
+        <li>Tom Neij</li>
+    </ul>
+
+</p>
