Added detail page + helper

--- a/src/Website/Views/Sentiment/Overview.cshtml
+++ b/src/Website/Views/Sentiment/Overview.cshtml
@@ -2,8 +2,6 @@
 
 @model OverviewViewModel
 
-<h2>Overview!</h2>
-
 <table class="table">
     <thead>
         <tr>
@@ -18,7 +16,7 @@
         @foreach (var item in Model.Items)
         {
             <tr>
-                <th scope="row"><img src="@item.Icon" title="@item.Name" width="100" /></th>
+                <th scope="row"><a href="/sentiment/details/@item.Name"><img src="@item.Icon" title="@item.Name" width="100" /></a></th>
                 <td><p class="text-success">@item.Positive %</p></td>
                 <td><p class="text-warning">@item.Neutral %</p></td>
                 <td><p class="text-danger">@item.Negative %</p></td>
