--- a/src/Website/Content/Site.css
+++ b/src/Website/Content/Site.css
@@ -22,3 +22,32 @@ select,
 textarea {
     max-width: 280px;
 }
+
+
+/* CUSTOM STYLES */
+.navbar
+{
+    background-color: #333;
+    border-color: #333;
+}
+
+.jumbotron {
+    color: inherit;
+    background-color: #333;
+}
+
+.jumbotron h1,
+.jumbotron .h1 {
+    color: #fc0;
+}
+
+.jumbotron p {
+    color: #fff;
+}
+
+.container .jumbotron,
+.container-fluid .jumbotron {
+    border-radius: 0px;
+    border-bottom-left-radius: 6px;
+    border-bottom-right-radius: 6px;
+}
