--- a/src/Website/Views/Home/About.cshtml
+++ b/src/Website/Views/Home/About.cshtml
@@ -8,6 +8,7 @@
     <ul>
         <li>Thomas Bardoel</li>
         <li>Remco Verheijen</li>
+        <li>Marnix de Vrije</li>
         <li>Tom Neij</li>
     </ul>
 
