--- a/src/Website/Views/Sentiment/Details.cshtml
+++ b/src/Website/Views/Sentiment/Details.cshtml
@@ -1,15 +1,30 @@
 ﻿@using Website.Models
 
-@model DetailViewModel
+@model LabelModel
 
 
 @if (Model != null)
 {
     <div class="jumbotron">
-        <h1>@Model.Label.Name Details</h1>
-        <p class="lead">Hier is het sentiment over @Model.Label.Name te vinden</p>
+        <h1>@Model.Name Details</h1>
+        <p class="lead">Hier is het sentiment over @Model.Name te vinden</p>
     </div>
 
+    <div class="row">
+        <div class="col-md-12">
+            @{
+                Html.RenderAction("Trend", "Sentiment");
+            }
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            @{
+                Html.RenderAction("Tweets", "Sentiment");
+            }
+        </div>
+    </div>
 }
 else
 {
