added mocked tweets + detail page

--- a/src/Website/Content/Site.css
+++ b/src/Website/Content/Site.css
@@ -73,3 +73,13 @@ textarea {
 .font-weight-bold {
     font-weight: 700 !important;
 }
+
+.table-success, .table-success > td, .table-success > th {
+    background-color: #c3e6cb;
+}
+.table-danger, .table-danger > td, .table-danger > th {
+    background-color: #f5c6cb;
+}
+.table-secondary, .table-secondary > td, .table-secondary > th {
+    background-color: #d6d8db;
+}
