--- a/src/Website/Views/Sentiment/Overview.cshtml
+++ b/src/Website/Views/Sentiment/Overview.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Website.Models
 
-@model OverviewViewModel
+@model OverviewModel
 @{
     Layout = null;
 }
@@ -16,7 +16,7 @@
 <table class="table  table-hover">
     <thead>
         <tr>
-            <th scope="col">Label</th>
+            <th scope="col"></th>
             <th scope="col">Positief</th>
             <th scope="col">Neutraal</th>
             <th scope="col">Negatief</th>
@@ -29,7 +29,7 @@
             <tr class="hoverable-row" onclick="javascript:goto('/sentiment/details/@item.Name')">
                 <th scope="row"><img src="@item.Icon" title="@item.Name" width="100" /></th>
                 <td><p class="font-weight-bold text-success">@item.Positive %</p></td>
-                <td><p class="font-weight-bold text-warning">@item.Neutral %</p></td>
+                <td><p class="font-weight-bold">@item.Neutral %</p></td>
                 <td><p class="font-weight-bold text-danger">@item.Negative %</p></td>
             </tr>
         }
