--- a/src/Website/Views/Home/About.cshtml
+++ b/src/Website/Views/Home/About.cshtml
@@ -1,15 +1,24 @@
 ﻿@{
     ViewBag.Title = "Over ons";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>
-    <ul>
-        <li>Thomas Bardoel</li>
-        <li>Remco Verheijen</li>
-        <li>Marnix de Vrije</li>
-        <li>Tom Neij</li>
-    </ul>
 
-</p>
+<div class="jumbotron">
+    <h1>@ViewBag.Title.</h1>
+    <p class="lead">Het project team!</p>
+</div>
+
+<div class="row">
+
+    <div class="col-md-12">
+        <p>
+            <ul>
+                <li>Thomas Bardoel</li>
+                <li>Remco Verheijen</li>
+                <li>Marnix de Vrije</li>
+                <li>Tom Neij</li>
+            </ul>
+
+        </p>
+    </div>
+</div>
