--- a/src/Website/Views/Shared/_Layout.cshtml
+++ b/src/Website/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Over Ons", "About", "Home")</li>
+                    <li>@Html.ActionLink("De Innovatie", "Innovation", "Home")</li>
+                    <li>@Html.ActionLink("Demo", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Whats Next", "Future", "Home")</li>
                 </ul>
             </div>
         </div>
